--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
 }
 </script>
 <link rel="stylesheet" href="/index.css">
+<link rel="apple-touch-icon" href="/icon-512.png.png">
+<link rel="icon" type="image/png" href="/icon-512.png.png">
 </head>
 <body>
     <div id="root"></div>
